--- a/com.ibm.wala.ide/build.properties
+++ b/com.ibm.wala.ide/build.properties
@@ -1,11 +1,7 @@
-bin.includes = .,\
-               META-INF/,\
-               plugin.properties,\
-               target/dependency/com.ibm.wala.core.jar,\
-               target/dependency/com.ibm.wala.util.jar,\
-               target/dependency/com.ibm.wala.shrike.jar,\
-               target/dependency/com.ibm.wala.cast.jar
+bin.includes = META-INF/,\
+               .,\
+               plugin.properties
 jars.compile.order = .
 source.. = src/main/java/
-output.. = bin/main
+output.. = bin/main/
 javacProjectSettings = true
