--- a/com.ibm.wala.ide/.settings/org.eclipse.pde.prefs
+++ b/com.ibm.wala.ide/.settings/org.eclipse.pde.prefs
@@ -1,7 +1,7 @@
 compilers.f.unresolved-features=0
 compilers.f.unresolved-plugins=0
 compilers.incompatible-environment=0
-compilers.p.build=0
+compilers.p.build=1
 compilers.p.build.bin.includes=0
 compilers.p.build.encodings=0
 compilers.p.build.java.compiler=0
@@ -12,13 +12,16 @@ compilers.p.build.source.library=0
 compilers.p.build.src.includes=0
 compilers.p.deprecated=0
 compilers.p.discouraged-class=0
+compilers.p.exec-env-too-low=1
 compilers.p.internal=0
 compilers.p.missing-packages=0
 compilers.p.missing-version-export-package=2
 compilers.p.missing-version-import-package=0
 compilers.p.missing-version-require-bundle=2
 compilers.p.no-required-att=0
+compilers.p.no.automatic.module=1
 compilers.p.not-externalized-att=0
+compilers.p.service.component.without.lazyactivation=1
 compilers.p.unknown-attribute=0
 compilers.p.unknown-class=0
 compilers.p.unknown-element=0
